@@ -46,9 +46,9 @@ CgXmlNodeList *cg_xml_nodelist_new()
 		nodeList->userDataDestructorFunc = NULL;
 	}
 
-	return nodeList;
-
 	cg_log_debug_l4("Leaving...\n");
+
+	return nodeList;
 }
 
 /****************************************
@@ -66,10 +66,10 @@ void cg_xml_nodelist_delete(CgXmlNodeList *nodeList)
 }
 
 /****************************************
-* cg_xml_nodelist_getnode
+* cg_xml_nodelist_getbyname
 ****************************************/
 
-CgXmlNode *cg_xml_nodelist_get(CgXmlNodeList *nodeList, char *name)
+CgXmlNode *cg_xml_nodelist_getbyname(CgXmlNodeList *nodeList, char *name)
 {
 	CgXmlNode *node;
 	char *nodeName;
@@ -87,7 +87,34 @@ CgXmlNode *cg_xml_nodelist_get(CgXmlNodeList *nodeList, char *name)
 			return node;
 	}
 	
-	return NULL;
-
 	cg_log_debug_l4("Leaving...\n");
+
+	return NULL;
+}
+
+/****************************************
+* cg_xml_nodelist_getbyxpath
+****************************************/
+
+CgXmlNode *cg_xml_nodelist_getbyxpath(CgXmlNodeList *nodeList, char *name)
+{
+	CgXmlNode *node;
+	char *nodeName;
+		
+	cg_log_debug_l4("Entering...\n");
+
+	if (name == NULL)
+		return NULL;
+		
+	for (node = cg_xml_nodelist_gets(nodeList); node != NULL; node = cg_xml_node_next(node)) {
+		nodeName = cg_xml_node_getname(node);
+		if (nodeName == NULL)
+			continue;
+		if (cg_strcasecmp(nodeName, name) == 0)
+			return node;
+	}
+	
+	cg_log_debug_l4("Leaving...\n");
+
+	return NULL;
 }
